Kubernetes/yml file/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
       paths:
       - path: /apache
         pathType: Prefix
         backend:
           service:
             name: apache-service
             port:
               number: 80
       - path: /custom
         pathType: Prefix
         backend:
           service:
             name: custom-service
             port:
               number: 5000
